feat: Ajout système complet d'inscriptions externes avec documentation
- Ajout du README_TRAITEMENT_INSCRIPTIONS_EXTERNES.md détaillant tout le processus
- Implémentation complète du système d'inscription externe
- Dashboard externe avec widgets et interface moderne
- Système d'envoi d'emails automatique (acceptation/rejet)
- Gestion des profils utilisateurs (interne/externe)
- Documentation complète des flux de traitement
- Interface d'administration pour gérer les demandes
- Redirection automatique selon le type d'utilisateur

--- a/src/main/webapp/WEB-INF/views/template/layout.html
+++ b/src/main/webapp/WEB-INF/views/template/layout.html
@@ -24,19 +24,34 @@
     <link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/resources/css/icons.min.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/resources/css/app.min.css}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" th:href="@{/resources/styles/app.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/resources/styles/app.css}"
+	type="text/css" />
     <link th:href="@{/resources/css/custom.min.css}" rel="stylesheet" type="text/css" />
     
-    <link rel="stylesheet" th:href="@{/resources/libs/jquery/plugins/integration/bootstrap/3/dataTables.bootstrap.css}" type="text/css" />
-	<link th:href="@{/resources/plugins/bootstrap-datepicker/css/bootstrap-datepicker.css}" rel="stylesheet" />
-	<link th:href="@{/resources/plugins/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet" />
-	<link th:href="@{/resources/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css}" rel="stylesheet" />
-	<link rel="stylesheet" th:href="@{/resources/libs/jquery/summernote/dist/summernote.css}" type="text/css" />
+    <link rel="stylesheet"
+		th:href="@{/resources/libs/jquery/plugins/integration/bootstrap/3/dataTables.bootstrap.css}"
+		type="text/css" />
+	<link
+		th:href="@{/resources/plugins/bootstrap-datepicker/css/bootstrap-datepicker.css}"
+		rel="stylesheet" />
+	<link
+		th:href="@{/resources/plugins/bootstrap-daterangepicker/daterangepicker.css}"
+		rel="stylesheet" />
+	<link
+		th:href="@{/resources/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css}"
+		rel="stylesheet" />
+	<link rel="stylesheet"
+		th:href="@{/resources/libs/jquery/summernote/dist/summernote.css}"
+		type="text/css" />
 	<link th:href="@{/resources/libs/quill/quill.core.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/resources/libs/quill/quill.bubble.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/resources/libs/quill/quill.snow.css}" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" th:href="@{/resources/libs/jquery/select2/dist/css/select2.min.css}" type="text/css" />
-	<link rel="stylesheet" th:href="@{/resources/libs/jquery/select2-bootstrap-theme/dist/select2-bootstrap.min.css}" type="text/css" />
+	<link rel="stylesheet"
+		th:href="@{/resources/libs/jquery/select2/dist/css/select2.min.css}"
+		type="text/css" />
+	<link rel="stylesheet"
+		th:href="@{/resources/libs/jquery/select2-bootstrap-theme/dist/select2-bootstrap.min.css}"
+		type="text/css" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 	<script th:src="@{/resources/libs/jquery/PACE/pace.min.js}"></script>
